--- a/index.html
+++ b/index.html
@@ -1,5 +1,117 @@
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Foundation | Welcome</title>
+<link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+</head>
 <body>
-  Coming soon!
+<div class="off-canvas-wrapper">
+<div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
+<div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
+<div class="row column">
+<br>
+<img class="thumbnail" src="https://placehold.it/550x350">
+<h5>Jacob Diaz</h5>
+<p>This is a collection of pictures I've found on the Internet. Either for the reactions they evoke or I think the art is really neat.</p>
+</div>
+</div>
+<div class="off-canvas-content" data-off-canvas-content>
+<div class="title-bar hide-for-large">
+<div class="title-bar-left">
+<button class="menu-icon" type="button" data-open="my-info"></button>
+<span class="title-bar-title">Mike Mikerson</span>
+</div>
+</div>
+<div class="callout primary">
+<div class="row column">
+<h1>Cool Art and Stuff</h1>
+<p class="lead">I don't have a particular preference when it comes to art. If I like it, I like it.</p>
+</div>
+</div>
+<div class="row small-up-2 medium-up-3 large-up-4">
+<div class="column">
+<img class="thumbnail" src="stars.png">
+<h5>Look at the stars.</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="plasticlove.png">
+<h5>Dance to the Plastic Beat</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="2P.jpg">
+<h5>My Site</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="099m3.jpg">
+<h5>Unfounded Revenge</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="cat.jpg">
+<h5>Byakko</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="dog.png">
+<h5>Diamond Dog</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="maniac.png">
+<h5>Have you seen this man?</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="moira frizzle.jpg">
+<h5>Seatbelts, everyone.</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="Panda.jpg">
+<h5>I'm hungry.</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="pfjojo.jpg">
+<h5>Bowling for Soup</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="rp.png">
+<h5>They're distantly related to raccoons.</h5>
+</div>
+<div class="column">
+<img class="thumbnail" src="sombra.jpg">
+<h5>Iniciando el haqueo.</h5>
+</div>
+</div>
+<hr>
+<div class="row">
+<div class="medium-6 columns">
+<h3>Contact Me</h3>
+<p>I value my privacy so please email me at xxx@xxx.xxx before I add you on my social media.</p>
+<ul class="menu">
+<li><a href="#">Dribbble</a></li>
+<li><a href="#">Facebook</a></li>
+<li><a href="#">Yo</a></li>
+</ul>
+</div>
+<div class="medium-6 columns">
+<label>Name
+<input type="text" placeholder="Name">
+</label>
+<label>Email
+<input type="text" placeholder="Email">
+</label>
+<label>
+Message
+<textarea placeholder="holla at a designerd"></textarea>
+</label>
+<input type="submit" class="button expanded" value="Submit">
+</div>
+</div>
+</div>
+</div>
+</div>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+<script>
+      $(document).foundation();
+    </script>
 </body>
 </html>
