--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
 <div class="row column">
 <br>
-<img class="thumbnail" src="https://placehold.it/550x350">
+<img class="thumbnail" src="tanks4.jpg">
 <h5>Jacob Diaz</h5>
 <p>This is a collection of pictures I've found on the Internet. Either for the reactions they evoke or I think the art is really neat.</p>
 </div>
